--- a/Leap-year/index.html
+++ b/Leap-year/index.html
@@ -2,11 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Javascript Learning</title>
-    <link rel="stylesheet" href="styles.css">
+    <title></title>
   </head>
   <body>
-<h1>Hello</h1>
 
 <script src="index.js" charset="utf-8"></script>
 
